force-app/main/default/objects/leaseworks__Payout__c/leaseworks__Payout__c.object-meta.xml
<CustomObject>
    <label>Payouts</label>
    <nameField>
        <displayFormat>{YYYY}-SPAY--{0000}</displayFormat>
        <label>Payouts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payouts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>