force-app/main/default/objects/leaseworks__Payout__c/fields/leaseworks__Cancellation_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Cancellation_Date__c</fullName>
    <description>Date of Payout Cancellation</description>
    <label>Cancellation Date</label>
    <type>Date</type>
</CustomField>