force-app/main/default/objects/leaseworks__Payout__c/fields/leaseworks__Claim__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Claim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Claims</label>
    <referenceTo>leaseworks__Claims__c</referenceTo>
    <relationshipLabel>Payouts</relationshipLabel>
    <relationshipName>Payouts</relationshipName>
    <type>Lookup</type>
</CustomField>