force-app/main/default/objects/leaseworks__Payout__c/fields/leaseworks__Global_Accounting_Setting__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Global_Accounting_Setting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to store the lookup of Global Accounting Setting</description>
    <label>_Global Accounting Setting</label>
    <referenceTo>leaseworks__Global_Accounting_Setup__c</referenceTo>
    <relationshipLabel>Payouts</relationshipLabel>
    <relationshipName>Payouts</relationshipName>
    <type>Lookup</type>
</CustomField>