force-app/main/default/objects/leaseworks__Payout__c/fields/leaseworks__Payout_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Payout_Amount__c</fullName>
    <label>Payout Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>