force-app/main/default/objects/leaseworks__Payout__c/fields/leaseworks__Payout_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Payout_Date__c</fullName>
    <label>Payout Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>