force-app/main/default/objects/leaseworks__Payout__c/fields/leaseworks__Reconciliation_Schedule__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Reconciliation_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Indicates the link to the reconciliation schedule on which the payout is applied/related.</inlineHelpText>
    <label>Reconciliation Schedule</label>
    <referenceTo>leaseworks__Reconciliation_Schedule__c</referenceTo>
    <relationshipLabel>Payouts</relationshipLabel>
    <relationshipName>Payouts</relationshipName>
    <type>Lookup</type>
</CustomField>