force-app/main/default/objects/leaseworks__Payout__c/fields/leaseworks__Security_Deposit__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Security_Deposit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Security Deposit</label>
    <referenceTo>leaseworks__Cash_Security_Deposit__c</referenceTo>
    <relationshipLabel>Payouts</relationshipLabel>
    <relationshipName>Payouts</relationshipName>
    <type>Lookup</type>
</CustomField>