force-app/main/default/objects/leaseworks__Payout__c/fields/leaseworks__Supplemental_Rent__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Supplemental_Rent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplemental Rent</label>
    <referenceTo>leaseworks__Assembly_MR_Rate__c</referenceTo>
    <relationshipLabel>Payouts</relationshipLabel>
    <relationshipName>Payouts</relationshipName>
    <type>Lookup</type>
</CustomField>