force-app/main/default/objects/leaseworks__Payout__c/fields/leaseworks__Utilization_Report__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Utilization_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Utilization</label>
    <referenceTo>leaseworks__Utilization_Report__c</referenceTo>
    <relationshipLabel>Payouts</relationshipLabel>
    <relationshipName>Payouts</relationshipName>
    <type>Lookup</type>
</CustomField>