force-app/main/default/objects/leaseworks__Payout__c/validationRules/leaseworks__Compare_Payout_and_Cancellation_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Compare_Payout_and_Cancellation_Date</fullName>
    <active>true</active>
    <description>Check Payout Cancellation Date</description>
    <errorConditionFormula>leaseworks__Cancellation_Date__c   &lt;  leaseworks__Payout_Date__c</errorConditionFormula>
    <errorMessage>Cancellation Date cannot be prior to the Payout Date</errorMessage>
</ValidationRule>