force-app/main/default/objects/leaseworks__Payout__c/validationRules/leaseworks__PayoutAmountGreaterThanZero.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__PayoutAmountGreaterThanZero</fullName>
    <active>true</active>
    <description>Payout Amount must be greater than zero</description>
    <errorConditionFormula>leaseworks__Payout_Amount__c  &lt;= 0</errorConditionFormula>
    <errorDisplayField>leaseworks__Payout_Amount__c</errorDisplayField>
    <errorMessage>The amount to be paid out cannot be less than or equal to zero.</errorMessage>
</ValidationRule>